<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/green"
    android:orientation="vertical" >

    <!-- == Header == -->

    <LinearLayout
        android:id="@+id/export_headerbit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_edit_before_export"
            android:textColor="@color/default_text_color_light" />
    </LinearLayout>

    <!-- == Bottom == -->

    <LinearLayout
        android:id="@+id/export_buttonsbit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonshare"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:drawableLeft="@android:drawable/ic_menu_share"
            android:text="@string/label_export_share" />

        <Button
            android:id="@+id/buttontosd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:drawableLeft="@android:drawable/ic_menu_upload"
            android:text="@string/label_export_to_sd" />

        <Button
            android:id="@+id/buttoncloseexport"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
            android:text="@string/label_export_close" />
    </LinearLayout>

    <!-- == Main == -->

    <ScrollView
        android:id="@+id/export_mainbit"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/export_buttonsbit"
        android:layout_below="@+id/export_headerbit"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0px"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/fld_export_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>